2008-11-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1306/cpukit
	* posix/inline/rtems/posix/priority.inl: Eliminate hard coded numbers
	in favor of existing macros.

2008-11-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/Makefile.am: Add dummy vfork() implementation.
	* posix/src/vfork.c: New file.

2008-11-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1336/cpukit
	* sapi/inline/rtems/chain.inl: Add rtems_chain_prepend_unprotected and
	rtems_chain_append_unprotected.

2008-11-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/Makefile.am: Add getrusage().
	* libcsupport/src/getrusage.c: New file.

2008-11-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/timespecaddto.c: Fix typo.

2008-11-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/ttyname.c: Change third parameter of ttyname to be
	size_t instead of int.

2008-11-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* librpc/src/xdr/xdr_float.c: Add M32C, M32R, and Blackfin.

2008-11-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/threadhandler.c: M32R uses different name for init.

2008-11-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/Makefile.am: Add _execve() so we can use newlib posix support
	directory and eliminate code in RTEMS.
	* posix/src/_execve.c: New file.

2008-11-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1333/cpukit
	* libcsupport/include/rtems/termiostypes.h: Typo on type name -- should
	be rtems_device_minor_number.

2008-10-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1331/networking
	* libmisc/shell/shell.c, telnetd/check_passwd.c, telnetd/telnetd.c,
	telnetd/telnetd.h: Improve comments and explanation of options to
	rtems_telnetd_initialize. Add extra newline to login sequence from
	shell.

2008-10-14	Tim Cussins <timcussins@eml.cc>

	PR 1330/cpukit
	* libcsupport/src/free.c: Should print begin field not start field.

2008-10-14	Wei Shen <cquark@gmail.com>
