@@ -1,5 +1,11 @@
 2008-11-20	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	* libcsupport/src/newlibc_exit.c, score/src/threadhandler.c: Do not
+	think about running init/fini on AVR. We do not know what mechanism
+	it uses but this is not it.
+
+2008-11-20	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	PR 1306/cpukit
 	* posix/inline/rtems/posix/priority.inl: Eliminate hard coded numbers
 	in favor of existing macros.
